# exp-cache

./: ChangeLog.md  README.md  exp-cache.cabal
benchmarks/: Main.hs
benchmarks/Benchmarks/: LFU.hs  LRU.hs  RR.hs
src/Data/: Cache.hs
src/Data/Cache/: Eviction.hs
src/Data/Cache/Eviction/: FIFO.hs  LFU.hs  LRU.hs  MRU.hs  RR.hs
test/: Spec.hs
test/Spec/: CacheTests.hs  LFUTests.hs  LRUTests.hs  MRUTests.hs  RRTests.hs
