name:           exp-cache
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/ChrisCoffey/exp-cache#readme>
homepage:       https://github.com/ChrisCoffey/exp-cache#readme
bug-reports:    https://github.com/ChrisCoffey/exp-cache/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/ChrisCoffey/exp-cache

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , time
    , unordered-containers
    , containers
    , deepseq
    , hashable
    , psqueues
  exposed-modules:
    Data.Cache
  other-modules:
    Data.Cache.Eviction.LRU
    Data.Cache.Eviction
  default-extensions:  DataKinds FlexibleContexts ScopedTypeVariables OverloadedStrings ViewPatterns NamedFieldPuns
                       KindSignatures RecordWildCards ConstraintKinds TypeSynonymInstances FlexibleInstances MultiParamTypeClasses
                       InstanceSigs FunctionalDependencies
  default-language: Haskell2010

test-suite exp-cache-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , exp-cache
    , HUnit
    , tasty
    , tasty-hunit
    , tasty-quickcheck
  other-modules:
      Spec.LRUTests,
      Spec.CacheTests
  default-language: Haskell2010

executable exp-cache-benchmarks
    main-is: Main.hs
    hs-source-dirs:
        benchmarks
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2 -fno-full-laziness
    build-depends:
        base
      , exp-cache
      , criterion
      , random
    other-modules:
        Benchmarks.LRU
    default-language: Haskell2010
